2010-05-11  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Kenneth Christiansen.

        [Qt] emit initialLayoutCompleted signal from FrameLoaderClientQt::dispatchDidFirstVisuallyNonEmptyLayout
        https://bugs.webkit.org/show_bug.cgi?id=38921

        Emit initialLayoutCompleted signal from FrameLoaderClientQt::dispatchDidFirstVisuallyNonEmptyLayout
        instead of FrameLoaderClientQt::dispatchDidFirstLayout , because the former ensures that a
        visual content layed out on the frame.

        It matches to QWebFrame::initialLayoutCompleted signal documentation at:

        "... This is the first time you will see contents displayed on the frame ..."

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::dispatchDidFirstLayout):
        (WebCore::FrameLoaderClientQt::dispatchDidFirstVisuallyNonEmptyLayout):

2010-05-11  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Laszlo Gombos.

        [Qt] REGRESSION(r58497) tst_QGraphicsWebView::crashOnViewlessWebPages() is failing
        https://bugs.webkit.org/show_bug.cgi?id=38655

        Fix double free by moving the connect till after the resize.

        The bug is causes by the fact that a resize of an empty page causes a
        layout, thus deleting the qgraphicswebview before setHtml is called,
        which then deletes it again, causing a double free.

        * tests/qgraphicswebview/tst_qgraphicswebview.cpp:
        (tst_QGraphicsWebView::crashOnViewlessWebPages):

2010-05-11  Diego Gonzalez  <diegohcg@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] tst_QWebPage::inputMethods failing on Maemo5
        https://bugs.webkit.org/show_bug.cgi?id=38685

        Check if the SIP (Software Input Panel) is triggered, which normally
        happens on mobile platforms, when a user input form receives a mouse click.

        * tests/qwebpage/tst_qwebpage.cpp:
        (tst_QWebPage::inputMethods):
